--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -12,13 +12,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+
+
+    <!--OUTFIT FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <!--INTER FONT-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
+
+
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6729f6eb2480f5b4f598ea0d/1ibtup2j8';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
+    
 </head>
 <body>
 
 
-
-<!-- Fixed Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
+   <!-- Fixed Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
     <div class="container">
         <a class="navbar-brand" href="index.html">
             <img src="assests/GIGI Logo.svg" alt="GIGI Buys Homes" href="index.html" class="logo">
@@ -55,9 +82,11 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> -->
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactFormModal" style="cursor: pointer;">Contact Us</a></li>
             </ul>
-            <a href="#" class="btn btn-warning ms-3">Sell Now</a>
+            <!-- <a href="#" class="btn btn-warning ms-3">Sell Now</a> -->
+            <a button type="button" class="btn btn-warning ms-3" data-bs-toggle="modal" data-bs-target="#contactFormModal">Sell Now</a>
         </div>
     </div>
 </nav>
@@ -281,6 +310,83 @@
         <p>&copy; 2023 All rights reserved</p>
     </div>
 </footer>
+
+
+
+<!-- Modal Structure -->
+<div class="modal fade" id="contactFormModal" tabindex="-1" aria-labelledby="contactFormLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="contactFormLabel">Get Your Free Cash Offer</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Form with onsubmit to trigger sendEmail -->
+                <form id="contactForm" onsubmit="sendEmailModal(); return false;">
+                    <div class="row g-3">
+                        <!-- Address -->
+                        <div class="col-md-12">
+                            <label for="address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="user_address" placeholder="Address" required>
+                        </div>
+
+                        <!-- Name -->
+                        <div class="col-md-6">
+                            <label for="name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="user_name" placeholder="Your Name" required>
+                        </div>
+
+                        <!-- Phone -->
+                        <div class="col-md-6">
+                            <label for="phone" class="form-label">Phone</label>
+                            <input type="number" class="form-control" id="user_phone" placeholder="Your Phone Number" required>
+                        </div>
+
+                        <!-- Email -->
+                        <div class="col-md-12">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="user_email" placeholder="you@example.com" required>
+                        </div>
+
+                        <!-- Checkbox for Privacy Policy -->
+                        <div class="col-md-12">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="privacyPolicy" required>
+                                <label class="modal-form-check-label" for="privacyPolicy">
+                                    I have read and accepted the Terms & Conditions and Privacy Statement.
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Submit Button -->
+                        <div class="col-md-12 d-flex justify-content-center">
+                            <button type="submit" class="btn btn-warning w-100">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!-- Load EmailJS Library in HTML -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+<!-- Initialize EmailJS with your User ID -->
+<script type="text/javascript">
+  (function(){
+      emailjs.init("LlE1vZBdg1gZWj3Sp"); // Initialize with your EmailJS user ID
+  })();
+</script>
+
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
