--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li> -->
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="modal" data-bs-target="#contactFormModal" style="cursor: pointer;">Contact Us</a></li>
             </ul>
             <!-- <a href="#" class="btn btn-warning ms-3">Sell Now</a> -->
             <a button type="button" class="btn btn-warning ms-3" data-bs-toggle="modal" data-bs-target="#contactFormModal">Sell Now</a>
@@ -305,7 +306,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 icon-box">
                 <div class="icon-wrapper">
-                    <img src="assests/No Fees or Commissions.svg" alt="Flexible Closings" class="icon" />
+                    <img src="assests/Flexible Closing.svg" alt="Flexible Closings" class="icon" />
                 </div>
                 <h3>Flexible Closings</h3>
                 <p>Close in as little as 7 days, or pick a date that suits your schedule and lifestyle.</p>
@@ -480,7 +481,7 @@
         <div class="row justify-content-center">
             <!-- Each Image Box with Caption -->
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="facing-foreclosure.html" target="_blank" class="unique-housing-link">
+                <a href="Facing Foreclosure.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Facing Foreclosure.svg" alt="Facing Foreclosure" class="unique-housing-image">
                     </div>
@@ -498,7 +499,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="inherited-property.html" target="_blank" class="unique-housing-link">
+                <a href="Inherited Property.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Inherited Property.svg" alt="Inherited Property" class="unique-housing-image">
                     </div>
@@ -507,7 +508,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="financial-difficulties.html" target="_blank" class="unique-housing-link">
+                <a href="Financial Difficulties.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Financial Difficulties.svg" alt="Financial Difficulties" class="unique-housing-image">
                     </div>
@@ -516,7 +517,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="relocation.html" target="_blank" class="unique-housing-link">
+                <a href="relocation.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Relocation.svg" alt="Relocation" class="unique-housing-image">
                     </div>
@@ -525,7 +526,7 @@
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12 unique-housing-box">
-                <a href="homes-needing-repairs.html" target="_blank" class="unique-housing-link">
+                <a href="homes-needing-repairs.html" class="unique-housing-link">
                     <div class="unique-housing-image-wrapper">
                         <img src="assests/Homes Needing Repairs.svg" alt="Homes Needing Repairs" class="unique-housing-image">
                     </div>
@@ -808,30 +809,31 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="contactForm">
+                <!-- Form with onsubmit to trigger sendEmail -->
+                <form id="contactForm" onsubmit="sendEmailModal(); return false;">
                     <div class="row g-3">
                         <!-- Address -->
                         <div class="col-md-12">
                             <label for="address" class="form-label">Address</label>
-                            <input type="text" class="form-control" id="address" placeholder="Your Address" required>
+                            <input type="text" class="form-control" id="user_address" placeholder="Address" required>
                         </div>
 
                         <!-- Name -->
                         <div class="col-md-6">
                             <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                            <input type="text" class="form-control" id="user_name" placeholder="Your Name" required>
                         </div>
 
                         <!-- Phone -->
                         <div class="col-md-6">
                             <label for="phone" class="form-label">Phone</label>
-                            <input type="tel" class="form-control" id="phone" placeholder="Your Phone Number" required>
+                            <input type="number" class="form-control" id="user_phone" placeholder="Your Phone Number" required>
                         </div>
 
                         <!-- Email -->
                         <div class="col-md-12">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+                            <input type="email" class="form-control" id="user_email" placeholder="you@example.com" required>
                         </div>
 
                         <!-- Checkbox for Privacy Policy -->
@@ -857,64 +859,18 @@
 
 
 
-<!-- SMTP JS -->
-<script src="https://smtpjs.com/v3/smtp.js"></script>
-<script>
-
-function sendEmail() {
-    let name = document.getElementById("name").value;
-    let email = document.getElementById("email").value;
-    let phone = document.getElementById("phone").value;
-    let address = document.getElementById("address").value;
-    let body = "Name: " + name + "<br> Email: " + email + "<br> Phone: " + phone + "<br> Address: " + address;
-    console.log(body);
-
-    Email.send({
-        Host : "smtp.elasticemail.com",
-        Username : "ahujamanish60@gmail.com",
-        Password : "ED63737F0FA41F2FFBDA62C0030402884A49",
-        To: 'ahujamanish60@gmail.com',
-        From: "ahujamanish60@gmail.com",
-        Subject: "Email us with any questions",
-        Body: body,
-    }).then(
-        message => alert("Message sent successfully")
-    );
-}
 
 
 
+<!-- Load EmailJS Library in HTML -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
-
-
-
-
-
-
-
-    // function sendEmail() {
-    //     let name = document.getElementById("name").value;
-    //     let email = document.getElementById("email").value;
-    //     let phone = document.getElementById("phone").value;
-    //     let address = document.getElementById("address").value;
-    //     let body = "Name: " + name + "<br> Email: " + email + "<br> Phone: " + phone + "<br> Address: " + address;
-    //     console.log(body);
-
-
-    //     Email.send({
-    //         Host : "smtp.elasticemail.com",
-    //         Username : "testwithbughunters2@gmail.com",
-    //         Password : "1962B0E55E086B9C9592CCBE1621CBFBFCFC",
-    //         To: 'testwithbughunters@gmail.com',  
-    //         From: "testwithbughunters@gmail.com",
-    //         Subject: "Email us with any questions",
-    //         Body: body,
-    //     }).then(
-    //         message => alert("message sent Successfully")
-    //     );
-    // }
+<!-- Initialize EmailJS with your User ID -->
+<script type="text/javascript">
+  (function(){
+      emailjs.init("LlE1vZBdg1gZWj3Sp"); // Initialize with your EmailJS user ID
+  })();
 </script>
-
 
 
 
@@ -923,7 +879,7 @@ function sendEmail() {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
 
