--- a/Facing Foreclosure.html
+++ b/Facing Foreclosure.html
@@ -174,7 +174,7 @@
                 <input type="email" class="form-control" id="email" placeholder="Email" required>
                 <div class="form-check">
                     <input type="checkbox" id="terms" class="form-check-input" required>
-                    <label class="form-check-label" for="terms">I have read and accepted the Terms & Conditions and Privacy Statement.</label>
+                    <label class="form-check-label" for="terms" style="color: #000000;">I have read and accepted the Terms & Conditions and Privacy Statement.</label>
                 </div>
                 <button type="submit" class="btn btn-warning w-100">Submit</button>
             </form>
@@ -194,10 +194,7 @@
             If your home is in foreclosure, selling it before the sheriff’s sale can help you avoid damaging your credit and facing additional tax penalties. Acting quickly and getting a head start in the process gives you more time to prepare your home for sale, increasing your chances of getting a fair price and avoiding the harsh consequences of foreclosure. While the best outcome is catching up on your mortgage payments, taking swift action and preparing early can still allow you to sell your home before the foreclosure is finalized, potentially through a realtor or other means.
         </p>
         <div class="conclusion-call-to-action">
-            <!-- <a href="#" class="btn conclusion-btn">Contact Us Today for Support</a> -->
-            <a href="#" class="btn btn-warning w-100">Contact Us Today for Support</a>
-
-            <button type="submit" class="btn btn-warning w-100">Submit</button>
+            <a button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactFormModal">Contact Us Today for Support</a>
         </div>
     </div>
 </section>
