--- a/Inherited Property.html
+++ b/Inherited Property.html
@@ -247,7 +247,8 @@
             <br> Hiring professionals, such as a realtor or appraiser, can help ensure you get the best value for your property. If your priority is to sell quickly, a cash offer from companies like GIGI Buys Homes is an option that allows you to settle the sale in days rather than months, though typically at a discount to the market value. <br> Whatever path you choose, it’s important to explore all your options carefully before making any final decisions. These considerations can significantly impact the outcome and your financial future.
         </p>
         <div class="conclusion-call-to-action">
-            <a href="#" class="btn conclusion-btn">Contact Us Today for Support</a>
+            <a button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactFormModal">Contact Us Today</a>
+            
         </div>
     </div>
 </section>
