--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIGI Buys Homes</title>
     <link rel="icon" type="image/x-icon" href="assests/GIGI Favicon.svg">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
     
 </head>
 <body>
-
+<div style="overflow-x: hidden;">
 
    <!-- Fixed Navbar -->
    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
@@ -797,7 +797,7 @@
         <p>&copy; 2023 All rights reserved</p>
     </div>
 </footer>
-
+</div>
 
 
 <!-- Modal Structure -->
