--- a/Condos.html
+++ b/Condos.html
@@ -219,7 +219,7 @@
     <section class="condo-cta-section">
         <h2 class="cta-title">Ready to Sell Your Condo Easily?</h2>
         <p class="cta-text">Contact GIGI Buys Homes today to start the process. We’re here to help you make a smooth transition and provide the support you need for a stress-free sale!</p>
-        <a href="#" class="cta-button">Get Started Now</a>
+        <a button type="button" class="cta-button" data-bs-toggle="modal" data-bs-target="#contactFormModal">Contact Us Today</a>
     </section>
 </div>
 
