--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                         <li><a class="dropdown-item" href="divorce and seperation.html">Divorce or Separation</a></li>
                         <li><a class="dropdown-item" href="Inherited Property.html">Inherited Property</a></li>
                         <li><a class="dropdown-item" href="Financial Difficulties.html">Financial Difficulties</a></li>
-                        <li><a class="dropdown-item" href="#">Relocation</a></li>
-                        <li><a class="dropdown-item" href="#">Homes Needing Repairs</a></li>
+                        <li><a class="dropdown-item" href="Relocation.html">Relocation</a></li>
+                        <li><a class="dropdown-item" href="Homes Needing Repairs.html">Homes Needing Repairs</a></li>
+                        <li><a class="dropdown-item" href="Downsizing.html">Downsizing</a></li>
+                        <li><a class="dropdown-item" href="Unfinished Construction.html">Unfinished Construction</a></li>
+                        <li><a class="dropdown-item" href="Mortgage Renewal Struggles.html">Mortgage Renewal Struggles</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">How It Works</a></li>
